--- a/src/main/resources/public/template/boardAdmin/boardAdminView.html
+++ b/src/main/resources/public/template/boardAdmin/boardAdminView.html
@@ -32,7 +32,7 @@
             </div>
             <div class="form-set">
                 <label th:text="#{board.label.order}" for="boardAdminSort"></label>
-                <input class="column-2" id="boardAdminSort" name="boardAdminSort" type="text" th:value="${boardAdmin?.boardAdminSort}"
+                <input class="col-2" id="boardAdminSort" name="boardAdminSort" type="text" th:value="${boardAdmin?.boardAdminSort}"
                        maxlength="2" disabled/>
             </div>
             <div class="form-set">
@@ -75,7 +75,7 @@
             </div>
             <div class="form-set">
                 <label th:text="#{board.label.attachFileSize}" for="attachFileSize"></label>
-                <input class="column-2" id="attachFileSize" name="attachFileSize" type="text"
+                <input class="col-2" id="attachFileSize" name="attachFileSize" type="text"
                        th:value="${boardAdmin?.attachFileSize}" maxlength="4" disabled/>MB
             </div>
             <div class="btn-list btn-bar">
