--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -88,12 +88,12 @@
                         divRow.classList.add('row');
                         const keyLabel = document.createElement('label');
                         keyLabel.innerText = getColumnName(data);
-                        keyLabel.classList.add('column-4');
+                        keyLabel.classList.add('col-4');
                         const equalSpan = document.createElement('span');
                         equalSpan.textContent = '=';
                         const valueLabel = document.createElement('label');
                         valueLabel.innerText = condition[data];
-                        valueLabel.classList.add('column-7');
+                        valueLabel.classList.add('col-7');
 
                         divRow.appendChild(keyLabel);
                         divRow.appendChild(equalSpan);
