--- a/src/main/resources/public/template/document/documentDisplay.html
+++ b/src/main/resources/public/template/document/documentDisplay.html
@@ -92,7 +92,7 @@
                 displaySelect.add(option);
             }
             displaySelect.setAttribute('id',componentId + '_' + elementId);
-            displaySelect.setAttribute('class', 'column-2');
+            displaySelect.setAttribute('class', 'col-2');
             displaySelect.setAttribute('name', 'displays');
             obj.appendChild(displaySelect);
         }
