--- a/src/main/resources/public/template/token/tokenPopUp.html
+++ b/src/main/resources/public/template/token/tokenPopUp.html
@@ -9,7 +9,7 @@
 <th:block layout:fragment="content">
     <div class="edit">
         <h3 class="under-bar" th:text="#{token.label.relatedInstance}"></h3>
-        <input class="search column-3" type="text" name="search" id="search"
+        <input class="search col-3" type="text" name="search" id="search"
                th:placeholder="#{token.label.searchPlaceholder}"/>
         <div class="table-set" id="instanceList"></div>
         <div class="horizontal-bar"></div>
