--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -16,7 +16,7 @@
             </div>
             <div class="search-area">
                 <div class="left">
-                    <input id="search" class="search column-4">
+                    <input id="search" class="search col-4">
                     <span id="totalCount" class="txt-num"></span>
                 </div>
                 <div class="right">
@@ -32,21 +32,21 @@
             <div class="scroll-wrap">
                 <div class="form-wrap">
                     <div class="form-row">
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label class="required" th:text="#{code.label.code}" for="txtCode"></label>
                             <input id="txtCode" name="txtCode" type="text" th:value="${codeDetail?.code}" maxlength="100"/>
                         </div>
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{code.label.pCode}" for="txtPCode"></label>
                             <input id="txtPCode" name="txtPCode" type="text" th:value="${codeDetail?.pCode}" maxlength="100"/>
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{code.label.name}" for="txtCodeName"></label>
                             <input id="txtCodeName" name="txtCodeName" type="text" th:value="${codeDetail?.codeName}" maxlength="100"/>
                         </div>
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{code.label.codeValue}" for="txtCodeValue"></label>
                             <input id="txtCodeValue" name="txtCodeValue" type="text" th:value="${codeDetail?.codeValue}" maxlength="100"/>
                         </div>
@@ -60,21 +60,21 @@
                         <textarea id="txtCodeDesc" name="txtCodeDesc" th:maxlength="200" th:rows="7" th:text="${codeDetail?.codeDesc}"></textarea>
                     </div>
                     <div class="form-row">
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{common.label.createUser}"></label>
                             <input id="txtCreateUserName" name="txtCreateUserName" type="text" th:value="${codeDetail?.createUserName}" th:disabled="true" maxlength="100"/>
                         </div>
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{common.label.updateUser}"></label>
                             <input id="txtUpdateUserName" name="txtUpdateUserName" type="text" th:value="${codeDetail?.updateUserName}" th:disabled="true" maxlength="100"/>
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{common.label.createDate}"></label>
                             <input id="txtCreateDt" name="txtCreateDt" class="date-icon" type="text" th:disabled="true" maxlength="100"/>
                         </div>
-                        <div class="form-set column-2">
+                        <div class="form-set form-div">
                             <label th:text="#{common.label.updateDate}"></label>
                             <input id="txtUpdateDt" name="txtUpdateDt" class="date-icon" type="text" th:disabled="true" maxlength="100"/>
                         </div>
