--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -16,7 +16,7 @@
         <div class="search-area">
             <div class="left">
                 <form id="searchFrm">
-                    <input class="search column-4" id="search" name="search" type="text" maxlength="100" th:placeholder="#{faq.label.searchPlaceholder}"/>
+                    <input class="search col-4" id="search" name="search" type="text" maxlength="100" th:placeholder="#{faq.label.searchPlaceholder}"/>
                 </form>
             </div>
             <div class="right">
