--- a/src/main/resources/public/template/form/formAdminSearch.html
+++ b/src/main/resources/public/template/form/formAdminSearch.html
@@ -20,7 +20,7 @@
         </div>
         <div class="search-area">
             <div class="left">
-                <input class="search column-5" id="search" type="text" maxlength="100" th:placeholder="#{form.label.searchPlaceholder}"/>
+                <input class="search col-5" id="search" type="text" maxlength="100" th:placeholder="#{form.label.searchPlaceholder}"/>
             </div>
             <div class="right">
                 <button class="default-line" type="button" onclick="openFormImport();" sec:authorize="hasAuthority('form.create')" th:text="#{form.btn.import}"></button>
