--- a/src/main/resources/public/template/portal/faq/portalFaq.html
+++ b/src/main/resources/public/template/portal/faq/portalFaq.html
@@ -14,7 +14,7 @@
 			<h6 class="description" th:text="#{faq.label.description}"></h6>
 		</div>
 		<div class="portal-faq-select">
-			<select id="groupCode" name="groupCode" onchange="getFaqList(this.value, '')" class="column-4">
+			<select id="groupCode" name="groupCode" onchange="getFaqList(this.value, '')" class="col-4">
 				<option th:text="#{common.code.faq.category.all}" value="" selected></option>
 				<option th:each="category:${faqs.faqCategory}"
 				        th:text="#{|common.code.${category}|}" th:value="${category}"></option>
