--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -16,7 +16,7 @@
             </div>
             <div class="search-area">
                 <div class="left">
-                    <input id="search" class="search column-5" th:placeholder="#{role.msg.searchPlaceholder}">
+                    <input id="search" class="search col-5" th:placeholder="#{role.msg.searchPlaceholder}">
                     <span id="totalCount" class="txt-num"></span>
                 </div>
                 <div class="right">
