--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -19,23 +19,23 @@
             <div>
                 <div class="left">
                     <form id="frmSearch">
-                        <select class="column-3" name="searchTokenType" id="searchTokenType">
+                        <select class="col-3" name="searchTokenType" id="searchTokenType">
                             <option value="token.type.todo" th:text="#{token.type.todo}" selected/>
                             <option value="token.type.requested" th:text="#{token.type.requested}"/>
                             <option value="token.type.progress" th:text="#{token.type.progress}"/>
                             <option value="token.type.completed" th:text="#{token.type.completed}"/>
                         </select>
-                        <select class="column-3" name="searchDocumentId" id="searchDocumentId">
+                        <select class="col-3" name="searchDocumentId" id="searchDocumentId">
                             <option value="" th:text="#{token.label.all}" selected="selected"/>
                             <option th:each="document: ${documentList}" th:value="${document.documentId}"
                                     th:text="${document.documentName}"/>
                         </select>
-                        <input class="search column-3" type="text" name="searchValue" id="searchValue"
+                        <input class="search col-3" type="text" name="searchValue" id="searchValue"
                                th:placeholder="#{token.label.searchPlaceholder}"/>
-                        <input type="text" id="searchFromDt" name="searchFromDt" class="search-date column-2"
+                        <input type="text" id="searchFromDt" name="searchFromDt" class="search-date col-2"
                                readonly="readonly"/>
-                        <input type="text" id="toDt" name="toDt" class="search-date column-2" readonly="readonly"/>
-                        <input type="hidden" id="searchToDt" name="searchToDt" class="search-date column-2"
+                        <input type="text" id="toDt" name="toDt" class="search-date col-2" readonly="readonly"/>
+                        <input type="hidden" id="searchToDt" name="searchToDt" class="search-date col-2"
                                readonly="readonly"/>
                     </form>
                 </div>
