--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -15,7 +15,7 @@
         </div>
         <div class="search-area">
             <div class="left">
-                <input class="search column-4" id="search" type="text" maxlength="100" th:placeholder="#{user.label.searchPlaceholder}"/>
+                <input class="search col-4" id="search" type="text" maxlength="100" th:placeholder="#{user.label.searchPlaceholder}"/>
             </div>
             <div class="right">
                 <button class="default-fill" onclick="location.href='/users/new'" sec:authorize="hasAuthority('user.create')" th:text="#{common.btn.add}"></button>
