--- a/src/main/resources/public/src/scss/template/_buttons.scss
+++ b/src/main/resources/public/src/scss/template/_buttons.scss
@@ -225,7 +225,8 @@ button {
     color: $btn-group-font-color;
     background-color: $btn-group-bg-color;
     border: $btn-group-border; // 1px
-    // 아이콘이 존재한다면
+    border-radius: $btn-group-border-radius;
+    // if icon exist
     .icon {
       display: inline-block;
       background: $btn-group-font-color;
@@ -248,13 +249,10 @@ button {
         color: $btn-group-pressed-font-color;
         background-color: $btn-group-pressed-bg-color;
         border-color: $btn-group-pressed-border-color;
+        z-index: 1;
 
         .icon {
           background: $btn-group-pressed-font-color;
-        }
-        + .btn,
-        + button {
-          border-left-color: $btn-group-pressed-border-color;
         }
       }
     }
@@ -269,9 +267,10 @@ button {
       }
     }
   }
-  // 양 끝 테두리 둥글게
+  // rounded corners
   .btn:not(:first-child),
   button:not(:first-child) {
+    margin-left: -$btn-group-border-width;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
@@ -280,7 +279,34 @@ button {
   button:not(:last-of-type) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    border-right: none;
+  }
+
+  // vertical button toggle group
+  &.btn-vertical {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    
+    .btn,
+    button {
+      flex: 0 1 auto;
+      border-radius: $btn-group-border-radius;
+    }
+
+    // Prevent double borders when buttons are next to each other
+    .btn:not(:first-child),
+    button:not(:first-child) {
+      margin-left: 0;
+      margin-top: -$btn-group-border-width;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      
+    }
+    .btn:not(:last-of-type), 
+    button:not(:last-of-type) {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
   }
 }
 // 버튼 그룹 토글
@@ -288,17 +314,18 @@ button {
   position: relative;
   display: inline-flex;
   vertical-align: middle;
-  
+
   .btn,
   button {
-    flex: 1 1 auto;
     font-size: $btn-group-font-size;
     font-weight: $btn-group-font-weight;
     line-height: $btn-group-line-height;
     color: $btn-group-toggle-font-color;
     background-color: $btn-group-toggle-bg-color;
     border: $btn-group-border; // 1px
-    // 아이콘이 존재한다면
+    border-radius: $btn-group-border-radius;
+    flex: 1 1 auto;
+    // if icon exist
     .icon {
       display: inline-block;
       background: $btn-group-toggle-font-color;
@@ -321,6 +348,7 @@ button {
         color: $btn-group-pressed-font-color;
         background-color: $btn-group-pressed-bg-color;
         border-color: $btn-group-pressed-border-color;
+        z-index: 1;
 
         .icon {
           background: $btn-group-pressed-font-color;
@@ -342,6 +370,7 @@ button {
   // 양 끝 테두리 둥글게
   .btn:not(:first-child),
   button:not(:first-child) {
+    margin-left: -$btn-group-border-width;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
@@ -350,7 +379,32 @@ button {
   button:not(:last-of-type) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    border-right-color: transparent;
+  }
+
+  // vertical button toggle group
+  &.btn-vertical {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+    .btn,
+    button {
+      flex: 0 1 auto;
+      border-radius: $btn-group-border-radius;
+    }
+    // Prevent double borders when buttons are next to each other
+    .btn:not(:first-child),
+    button:not(:first-child) {
+      margin-left: 0;
+      margin-top: -$btn-group-border-width;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    .btn:not(:last-of-type), 
+    button:not(:last-of-type) {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
   }
 }
 
