--- a/src/main/resources/public/src/scss/template/_date-picker.scss
+++ b/src/main/resources/public/src/scss/template/_date-picker.scss
@@ -5,268 +5,220 @@
  * @author wdj
  * @version 1.0
  */
-
-$datepicker-border-color: $line-gray;
-$datepicker-title-font-color: #464F50;
-$datepicker-title-font-size: 0.875rem; // 14px
-$datepicker-title-font-weight: bold;
-$datepicker-title-background-color: #ffffff;
-$datepicker-sub-title-font-color: #868F9A;
-$datepicker-sub-title-font-size: 0.688rem; // 11px
-$datepicker-sub-title-font-weight: 500;
-$datepicker-sub-title-background-color: $light-gray;
-$datepicker-content-font-size: 0.625rem; // 10px
-$datepicker-content-font-weight: 500;
-$datepicker-content-background-color: #ffffff;
-$datepicker-button-font-color: #68717C;
-$datepicker-button-font-size: 0.688rem; // 11px
-$datepicker-button-font-weight: normal;
-$datepicker-button-background-color: #ffffff;
-$datepicker-active-color: $point-blue;
-
+// input box
 .picker-wrapper-date {
-    display: inline-block;
+  display: inline-block;
 }
-
+// modal
 .picker-modal {
-    font-family: inherit;
-    display: none;
-    position: fixed;
-    background-color: #ffffff;
-    border: solid 0.0625rem $datepicker-border-color; // 1px
-    box-shadow: 0 0 0.3125rem 0 rgba(235, 235, 235, 1); // 5px
-    text-align: center;
+  display: none;
+  position: fixed;
+  min-width: 23.375rem; // 374px
+  font-family: inherit;
+  font-size: $datepicker-font-size;
+  font-weight: $datepicker-font-weight;
+  line-height: $datepicker-line-height;
+  color: $datepicker-font-color;
+  background-color: $datepicker-bg-color;
+  border: $datepicker-border;
+  border-radius: $datepicker-border-radius;
+  box-shadow: $datepicker-border-box-shadow;
+  text-align: center;
+  z-index: 999;
+  // modal open
+  &.active { 
+    display: block; 
     z-index: 999;
-    min-width: 23.375rem; // 374px
+  }
+  // modal title
+  &-title {
+    font-size: $datepicker-title-font-size;
+    font-weight: $datepicker-title-font-weight;
+    color: $datepicker-title-font-color;
+    border-bottom: $datepicker-border;
+    padding: 1.125rem 0; // 17px 0
 
-    &.active { display: block; z-index: 999;}
+    .icon-close {
+      position: absolute;
+      display: inline-block;
+      right: 1.25rem; // 20px
+      cursor: pointer;
+      @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $pressed-gray); // 14px 14px
+      // mouse over
+      &:hover {
+        background: $datepicker-hover-color;
+      }
+    }
+  }
+  // YYYY-MM-DD HH:MM 표시
+  &-sub-title {
+    font-size: $datepicker-sub-title-font-size;
+    font-weight: $datepicker-sub-title-font-weight;
+    color: $datepicker-sub-title-font-color;
+    background-color: $datepicker-sub-title-bg-color;
+    border-bottom: $datepicker-border;
+    padding: 0.625rem 0; // 10px 0
+  }
 
-    &-title {
-        font-size: 1.125rem; // 18px
-        font-weight: $font-weight-medium;
-        color: $light-black;
-        height: 3.3125rem; // 53px
-        background-color: $datepicker-title-background-color;
-        border-bottom: solid 0.0625rem $datepicker-border-color; // 1px
-        padding: 1.125rem 0; // 18px
+  &-content {
+    display: flex;
+    justify-content: center;
+    border-bottom: $datepicker-border;
+    padding: 1.25rem 0 0.9375rem 0; // 20px 0 15px 0
+    
+    &-date {
+      display: none;
+      width: 23.375rem; // 374px
 
-        span.close {
-            position: absolute;
-            right: 1.25rem; // 20px
-            background: $pressed-gray;
-            width: 0.875rem; // 14px
-            height: 0.875rem; // 14px
-            -webkit-mask: url($icon-folder-path + "icon_close.svg") no-repeat center center;
-            mask-image: url($icon-folder-path + "icon_close.svg") ;
-            mask-repeat: no-repeat;
-            mask-position: center;
+      &.active {
+        display: inline-block;
+
+        + div.active {
+          border-left: $datepicker-border;
+        }
+      }
+      // < month >
+      &-months {
+        display: table;
+        height: 1.563rem; // 25px
+        margin: 0 2.813rem; // 0 45px
+
+        img { vertical-align: middle; }
+
+        .date-prev {
+          display: table-cell;
+          cursor: pointer;
+          @include maskImage('#{$icon-folder-path}icon_arrow_left.svg', 0.625rem, 1.563rem, no-repeat, center, null, $dark-gray); // 너비 10px 높이 25px 아이콘 크기 10px 6px
+        }
+
+        .date-text {
+          display: table-cell;
+          width: 16.5rem; // 264px
+          margin: 0;
+          padding: 0;
+          vertical-align: middle;
+        }
+
+        .date-next {
+          display: table-cell;
+          cursor: pointer;
+          @include maskImage('#{$icon-folder-path}icon_arrow_right.svg', 0.625rem, 1.563rem, no-repeat, center, null, $dark-gray); // 너비 10px 높이 25px 아이콘 크기 10px 6px
+        }
+      }
+      // calendar
+      &-calendar {
+        color: $datepicker-cell-font-color; // 전월, 이월
+        padding: 0.625rem 1.5rem 0 1.5rem; // 10px 24px 0 24px
+
+        .calendar-cell {
+          display: inline-block;
+          width: 1.875rem; // 30px
+          height: 1.875rem; // 30px
+          line-height: 1.75rem; // 28px
+          padding: 0;
+          margin: 0.25rem 0.4375rem; // 4px 7px
+          text-align: center;
+
+          &.calendar-title {
+            pointer-events: none;
+          }
+
+          &:not(.calendar-title) {
             cursor: pointer;
+          }
+
+          &.active { // 현재 월
+            color: $datepicker-current-cell-font-color;
+          }
+
+          &.selected {
+            color: $datepicker-selected-cell-font-color;
+            background-color: $datepicker-selected-cell-bg-color;
+            border-radius: 50%;
+          }
         }
+      }
     }
 
-    &-sub-title {
-        @include h5();
-        background-color: $datepicker-sub-title-background-color;
-        border-bottom: solid 0.0625rem $datepicker-border-color; // 1px
-        padding: 0.5rem 0; // 8px
-    }
+    &-time {
+      display: none;
+      width: 23.375rem; // 374px
+      justify-content: center;
+      padding: 1.188rem 2.25rem; // 19px 36px
 
-    &-content {
+      &.active { display: flex; }
+
+      .hour-group,
+      .minute-group {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        border-bottom: solid 0.0625rem $datepicker-border-color; // 1px
-        padding: 1.25rem 0 0.5625rem 0; // 20px 9px
-        @include h5();
-        background-color: $datepicker-content-background-color;
-        &-date {
-            display: none;
-            width: 23.375rem; // 374px
+        align-items: center;
+    
+        .arrow-up {
+          display: inline-block;
+          margin: 0;
+          cursor: pointer;
+          @include maskImage('#{$icon-folder-path}icon_triangle_up.svg', 1.125rem, 0.625rem, no-repeat, center, null, $pressed-gray); // 18px, 10px
 
-            &.active {
-                display: inline-block;
-                + div.active {
-                    border-left: solid 0.0625rem $datepicker-border-color; // 1px
-                }
-            }
-
-            &-months {
-                height: 1.125rem; // 18px
-                margin: 0 2rem; // 0 32px
-
-                img { vertical-align: middle; }
-
-                .date-prev {
-                    display: inline-block;
-                    background: $dark-gray;
-                    width: 10px; // 10px
-                    height: 6px; // 6px
-                    -webkit-mask: url($icon-folder-path + "icon_arrow_left.svg") no-repeat center center;
-                    mask-image: url($icon-folder-path + "icon_arrow_left.svg") ;
-                    mask-repeat: no-repeat;
-                    mask-position: center;
-                    cursor: pointer;
-                }
-
-                .date-text {
-                    @include h5();
-                    display: inline-block;
-                    width: 16.875rem; // 270px
-                    color: $dark-gray;
-                    margin: 0;
-                    padding: 0;
-                }
-
-                .date-next {
-                    display: inline-block;
-                    background: $dark-gray;
-                    width: 10px; // 10px
-                    height: 6px; // 6px
-                    -webkit-mask: url($icon-folder-path + "icon_arrow_right.svg") no-repeat center center;
-                    mask-image: url($icon-folder-path + "icon_arrow_right.svg") ;
-                    mask-repeat: no-repeat;
-                    mask-position: center;
-                    cursor: pointer;
-                }
-
-            }
-
-            &-calendar {
-                padding: 1.25rem 1.5rem 0 1.5rem; // 20px 24px 16px 24px
-                color: #C2CBD6; // 전월, 이월
-
-                .calendar-cell {
-                    display: inline-block;
-                    width: 1.875rem; // 30px
-                    height: 1.875rem; // 30px
-                    line-height: 0.8125rem; // 13px
-                    padding: 0.4375rem; // 7px
-                    margin: 0.25rem 0.5rem; // 4px 8px
-                    text-align: center;
-
-                    &.calendar-title {
-                        @include h5();
-                        color: $gray;
-                        pointer-events: none;
-                    }
-
-                    &:not(.calendar-title) {
-                        cursor: pointer;
-                    }
-
-                    &.active { // 현재 월
-                        color: $dark-gray;
-                    }
-                    &.prev, &.next {
-                        color: $gray;
-                    }
-
-                    &.selected {
-                        background-color: $datepicker-active-color;
-                        color: #ffffff;
-                        border-radius: 48%;
-
-                    }
-                }
-            }
+          &:hover {
+            background: $datepicker-hover-color;
+          }
         }
-        &-time {
-            display: none;
-            width: 23.375rem; // 374px
-            justify-content: center;
-            padding: 1.188rem 2.25rem; // 19px 36px
 
-            &.active { display: flex; }
+        .arrow-down {
+          display: inline-block;
+          margin: 0;
+          cursor: pointer;
+          @include maskImage('#{$icon-folder-path}icon_triangle_down.svg', 1.125rem, 0.625rem, no-repeat, center, null, $pressed-gray); // 18px, 10px
 
-            .hour-group,
-            .minute-group {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                
-                .arrow-up {
-                  display: inline-block;
-                  @include maskImage('#{$icon-folder-path}icon_triangle_up.svg', 18px, 10px, no-repeat, center, null, $pressed-gray);
-                  cursor: pointer;
-                  &:hover {
-                    background: $point-blue;
-                  }
-                }
-
-                .arrow-down {
-                  display: inline-block;
-                  @include maskImage('#{$icon-folder-path}icon_triangle_down.svg', 18px, 10px, no-repeat, center, null, $pressed-gray);
-                  cursor: pointer;
-                  &:hover {
-                    background: $point-blue;
-                  }
-                }
-
-                .digit {
-                    width: 3.75rem; // 60px
-                    height: 3.75rem; // 60px
-                    color: #505964;
-                    font-size: 1.438rem; //23px
-                    font-weight: 500;
-                    text-align: center;
-                    margin: 2.1875rem 0; // 25px
-                    border: 0.0625rem solid $datepicker-border-color; // 1px
-                    padding: 0;
-
-                    &:focus {
-                        outline: none !important;
-                        border: 0.0625rem solid $datepicker-active-color;
-                    }
-                }
-            }
-            .btn-group {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-
-                button {
-                    width: 3.75rem; // 60px
-                    height: 1.875rem; // 30px
-                    color: $gray;
-                    font-size: 1rem; // 16px
-                    font-weight: 500;
-                    margin-left: 0.625rem; // 10px
-                    background-color: $light-gray;
-                    border: 0.0625rem solid $datepicker-border-color;
-                    padding: 0;
-                    cursor: pointer;
-                    flex: none;
-
-                    &.active {
-                        color: $datepicker-active-color;
-                        background-color: #ffffff;
-                        border: 0.0625rem solid $datepicker-active-color;
-                        + button { border-left-color: $datepicker-border-color; }
-                    }
-
-                    &:focus {
-                        outline: none !important;
-                    }
-                }
-            }
-
-            .separator { // 구분자 :
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                width: 2rem; // 32px
-                color: $light-black;
-                font-size: 1.438rem; // 23px
-                font-weight: 500;
-            }
+          &:hover {
+            background: $datepicker-hover-color;
+          }
         }
-    }
 
-    &-button {
-        float: right;
-        margin: 1.25rem 1.25rem 1.25rem 0;
+        .digit {
+          width: 3.75rem; // 60px
+          height: 3.75rem; // 60px
+          font-size: $datepicker-time-font-size;
+          font-weight: $font-weight-medium;
+          color: $datepicker-time-font-color;
+          text-align: center;
+          padding: 0;
+          margin: 2.1875rem 0; // 25px
+
+          &:focus {
+            outline: none;
+            border: $datepicker-focus-border;
+          }
+        }
+      }
+      // AM, PM
+      .btn-vertical {
+        padding-left: 0.625rem; // 10px
+
         button {
-            margin-left: 0.3125rem; // 5px
+          width: 3.75rem; // 60px
+          height: 1.875rem; // 30px
+          border-radius: $datepicker-btn-border-radius;
+          padding: 4px 14px;
         }
+      }
+       // 구분자 :
+      .separator { 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 2.5rem; // 40px
+        font-size: $datepicker-time-font-size;
+        font-weight: $font-weight-medium;
+        color: $datepicker-time-font-color;
+      }
     }
+  }
+  // 버튼 
+  &-button {
+    float: right;
+    margin: 1.25rem 1.25rem 1.25rem 0; // 20px 20px 20px 0
+  }
 }
