--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -57,7 +57,7 @@
                 </div>
                 <div id="boardUserInfo">
                     <div class="form-set">
-                        <label th:text="#{common.label.createUser}"/>
+                        <label th:text="#{common.label.writer}"/>
                         <input id="spanCreateUserKey" name="spanCreateUserKey" type="text" disabled
                                th:value="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"/>
                     </div>
